[package]
name = "stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
once_cell = "1.20.2"
parking_lot = "0.12.3"
tokio = {version = "1.43.0",features = ["full"]}
tracing = "0.1.41"
sysinfo = "0.29"
tokio-tungstenite = { version = "0.17.1", features = [
    "tokio-rustls",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
humantime = "2.1.0"


[dependencies.futures-util]
version = "0.3.21"
features = ["sink"]

