[package]
name = "stats"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
once_cell = "1.19.0"
parking_lot = "0.12.1"
tokio = { version = "1.17.0", features = [
    "full",
] }
tracing = "0.1.35"
sysinfo = "0.29"

tokio-tungstenite = { version = "0.17.1", features = [
    "tokio-rustls",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
humantime = "2.1.0"
futures-util = { version = "0.3.21", features = ["sink"] }
